# ODE_Solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app  ode_test.csv  ode_test.txt  sin_out.csv  test_out.csv  test_out.txt
Codes/: CMakeLists.txt  ODE.cpp  ODE.h  ODEFunction.cpp  ODEFunction.h  ODEFunctor.h  ODETable.cpp  ODETable.h  Reader.h  ReaderCMD.cpp  ReaderCSV.cpp  ReaderCSV.h  ReaderTXT.cpp
Documentation/: DynamicTensor.txt  OdeSolver_uml.txt  RootFinder_uml.txt  function_uml.txt  ode_uml.txt  output_uml.txt  reader_uml.txt
Documentation/Report/: ProjectOutline.out  ProjectOutline.tex  data_structure.txt  solver_class_diagram.txt
Report/: ProjectOutline.aux  ProjectOutline.bbl  ProjectOutline.blg  ProjectOutline.fdb_latexmk  ProjectOutline.fls  ProjectOutline.out  ProjectOutline.tex  data_structure.txt  input_class_diagram.txt  output_class_diagram.txt  references.bib  solver_class_diagram.txt
Tests/: adam_moulton_unittest.cpp  adamsbashforth_unittest.cpp  backward_differentiation_unittest.cpp  backward_euler_unittest.cpp  dynamic_tensor_unittest.cpp  forward_euler_unittest.cpp  function_unittest.cpp  newton_raphson_unittest.cpp  ode_unittest.cpp  output_plotter.cpp  output_unittest.cpp  reader_test.cpp  reader_unittest.cpp  runge_kutta_unittest.cpp
data/: input.csv  input.txt  output.csv  output.txt
docs/: Doxyfile
docs/html/: _2_users_2rocky_2notes_2_scientific_01_computing_2_o_d_e__solver_2include_2dynamic_tensor_8h-example.html  _formulas.tex  _formulas_dark.tex  _o_d_e_8h_source.html  _o_d_e_function_8h_source.html  _o_d_e_functor_8h_source.html  _o_d_e_table_8h_source.html  _reader_8h.html  _reader_8h.js  _reader_8h_source.html  _reader_c_m_d_8h_source.html  _reader_c_s_v_8h_source.html  _reader_t_x_t_8h_source.html  _table_entry_8h_source.html  _vector_output_8h_source.html  adam__moulton__solver_8h_source.html  adamsbashforth__solver_8h_source.html  annotated.html  annotated_dup.js  backward__differentiation__solver_8h_source.html  backward__euler__solver_8h_source.html  class_adam_moulton-members.html  class_adam_moulton.html  class_adam_moulton.js  class_adams_bashforth-members.html  class_adams_bashforth.html  class_adams_bashforth.js  class_backward_euler-members.html  class_backward_euler.html  class_backward_euler.js  class_bdf-members.html  class_bdf.html  class_bdf.js  class_csv_reader-members.html  class_csv_reader.html  class_csv_reader.js  class_dynamic_tensor-members.html  class_dynamic_tensor.html  class_dynamic_tensor.js  class_file_reader-members.html  (+174 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  (+54 more)
docs/latex/: _2_users_2rocky_2notes_2_scientific_01_computing_2_o_d_e__solver_2include_2dynamic_tensor_8h-example.tex  _o_d_e_8h_source.tex  _o_d_e_function_8h_source.tex  _o_d_e_functor_8h_source.tex  _o_d_e_table_8h_source.tex  _reader_8h.tex  _reader_8h_source.tex  _reader_c_m_d_8h_source.tex  _reader_c_s_v_8h_source.tex  _reader_t_x_t_8h_source.tex  _table_entry_8h_source.tex  _vector_output_8h_source.tex  adam__moulton__solver_8h_source.tex  adamsbashforth__solver_8h_source.tex  annotated.tex  backward__differentiation__solver_8h_source.tex  backward__euler__solver_8h_source.tex  class_adam_moulton.eps  class_adam_moulton.tex  class_adams_bashforth.eps  class_adams_bashforth.tex  class_backward_euler.eps  class_backward_euler.tex  class_bdf.eps  class_bdf.tex  class_csv_reader.eps  class_csv_reader.tex  class_dynamic_tensor.tex  class_file_reader.eps  class_file_reader.tex  class_forward_euler.eps  class_forward_euler.tex  class_forward_euler_light.eps  class_forward_euler_light.tex  class_function.eps  class_function.tex  class_implicit_solver.eps  class_implicit_solver.tex  class_implicit_solver_1_1_implicit_equation.eps  class_implicit_solver_1_1_implicit_equation.tex  (+75 more)
include/: ODE.h  ODETable.h  Reader.h  ReaderCMD.h  ReaderTXT.h  TableEntry.h  VectorOutput.h  adam_moulton_solver.h  adamsbashforth_solver.h  backward_differentiation_solver.h  backward_euler_solver.h  dynamic_tensor.h  expression.h  forward_euler_light_solver.h  forward_euler_solver.h  function.h  function_parser.h  implicit_solver.h  multistep_ode_solver.h  newton_raphson.h  ode.h  ode_copy.h  ode_raw_data.h  ode_solver.h  output.h  output_csv.h  output_file.h  output_plotter.h  output_txt.h  parsed_function.h  reader.h  reader_csv.h  reader_file.h  reader_txt.h  root_finder.h  runge_kutta_solver.h  solver_methods.h  tensor_parser.h
src/: ODE.cpp  ODEFunctor.cpp  ODETable.cpp  Reader.cpp  ReaderTXT.cpp  VectorOutput.cpp  adam_moulton_solver.cpp  adamsbashforth_solver.cpp  backward_differentiation_solver.cpp  backward_euler_solver.cpp  dynamic_tensor.cpp  forward_euler_light_solver.cpp  forward_euler_solver.cpp  function.cpp  function_parser.cpp  implicit_solver.cpp  main.cpp  multistep_ode_solver.cpp  newton_raphson.cpp  ode_copy.cc  ode_raw_data.cpp  ode_solver.cpp  output.cpp  output_csv.cpp  output_file.cpp  output_plotter.cpp  output_txt.cpp  parsed_function.cpp  reader.cc  reader.cpp  reader_csv.cc  reader_csv.cpp  reader_file.cc  reader_txt.cc  reader_txt.cpp  runge_kutta_solver.cpp
tests/: function_unittest.cpp  newton_raphson_unittest.cpp  ode_solver_unittest.cpp  ode_unittest.cpp  runge_kutta_unittest.cpp
